# fogros2-rt-x

./: .gitignore  Dockerfile  README.md
.github/workflows/: ros2_test.yml
dataviewer/: README.md
dataviewer/client/: package-lock.json  package.json
dataviewer/client/src/: app.html
dataviewer/client/src/lib/: Modal.svelte
dataviewer/client/src/routes/: +page.svelte
dataviewer/data/: test.db
dataviewer/server/: .gitignore  app.py  requirements.txt
dtype_msgs/: CMakeLists.txt
dtype_msgs/msg/: Action.msg  Observation.msg  Step.msg
fogros2-rt-x/: package.xml  setup.cfg  setup.py
fogros2-rt-x/dataviewer/: run.sh
fogros2-rt-x/dataviewer/client/: package-lock.json  package.json
fogros2-rt-x/dataviewer/data/: dataset-big.db
fogros2-rt-x/dataviewer/server/: app.py  export_rlds.py
fogros2-rt-x/fogros2_rt_x/: __init__.py  backend_writer.py  bag_manager.py  cli.py  cloud_manager.py  conf_base.py  config.py  data_types.py  database_connector.py  dataset_conf.py  dataset_loader.py  dataset_manager.py  dataset_spec.py  dataset_utils.py  exporter.py  fog.py  gcp_cloud_interface.py  orchestrator.py  recordall.sh  recorder copy.py  recorder.py  replayer.py  replayer_common.py
fogros2-rt-x/fogros2_rt_x/plugins/: berkeley_fanuc_manipulation.py  bridge.py  conf_base.py  orchestrator_base.py  orchestrator_examples.py  template.py
fogros2-rt-x/fogros2_rt_x/verbs/: export.py  load.py
fogros2-rt-x/launch/: data_collector.launch.py  replayer.launch.py
fogros2_rt_x_msgs/: CMakeLists.txt  package.xml
fogros2_rt_x_msgs/msg/: Action.msg  Observation.msg  Step.msg
(+2 files in other folders)
